[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.15.2",
    "sift-stack-py>=0.7.0",
]
